tests/ui/parser/returns_no_parens.sol
function f() returns {}
//~^ ERROR: expected `(`, found `{`
